RESOLVED FIXED74409
[GTK] plugins/netscape-plugin-page-cache-works.html fails
https://bugs.webkit.org/show_bug.cgi?id=74409
Summary [GTK] plugins/netscape-plugin-page-cache-works.html fails
Philippe Normand
Reported 2011-12-13 07:05:17 PST
Patch from bug 13634 introduced this test. It seems we'd need a new WebSetting for pageCacheSupportsPlugins, at least. I'll skip the test for now.
Attachments
Patch (5.29 KB, patch)
2012-03-02 03:39 PST, Zan Dobersek
no flags
Patch (6.05 KB, patch)
2012-03-02 06:29 PST, Zan Dobersek
no flags
Patch (7.87 KB, patch)
2012-03-05 07:36 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2012-03-02 03:37:38 PST
Also affected tests: media/crash-closing-page-with-media-as-plugin-fallback.htmlplugins/crash-restoring-plugin-page-from-page-cache.html
Zan Dobersek
Comment 2 2012-03-02 03:39:24 PST
Zan Dobersek
Comment 3 2012-03-02 03:44:24 PST
(In reply to comment #2) > Created an attachment (id=129866) [details] > Patch I've avoided adding new property to WebKitWebSettings and rather piped the setting through DumpRenderTreeSupport. It should be discussed if new API is welcome for this setting. The patch fixes two tests from comment #1 but the test in the title is flaky. It seems the plugin is loaded before the page, causing such failures: --- WebKitBuild/Release/layout-test-results/plugins/netscape-plugin-page-cache-works-expected.txt +++ WebKitBuild/Release/layout-test-results/plugins/netscape-plugin-page-cache-works-actual.txt @@ -5,9 +5,9 @@ Unfortunately there is no reliable way to get affirmative confirmation that the plugin was destroyed upon navigation away from the page. For now we'll assume recreation means it had successfully been destroyed. +null: Plugin created Initial load: Page loaded Initial load: Page shown -Initial load: Plugin created Initial load: Accessing testObject.property Initial load: Accessed testObject.property without exception Initial load: Assigning to testObject.property
Zan Dobersek
Comment 4 2012-03-02 06:29:30 PST
Zan Dobersek
Comment 5 2012-03-02 06:30:33 PST
(In reply to comment #3) > (In reply to comment #2) > > Created an attachment (id=129866) [details] [details] > > Patch > > The patch fixes two tests from comment #1 but the test in the title is flaky. Now covered by https://bugs.webkit.org/show_bug.cgi?id=80158
Philippe Normand
Comment 6 2012-03-02 07:47:40 PST
Comment on attachment 129894 [details] Patch Patch looks good, the only small doubt I have is wether a new websetting would be needed or not.
Martin Robinson
Comment 7 2012-03-02 08:38:12 PST
Comment on attachment 129894 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=129894&action=review > Tools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:841 > return; > + } else if (g_str_equal(originalName.get(), "WebKitPageCacheSupportsPluginsPreferenceKey")) { > + DumpRenderTreeSupportGtk::setPageCacheSupportsPlugins(webkit_web_frame_get_web_view(mainFrame), !g_ascii_strcasecmp(valueAsString.get(), "true") || !g_ascii_strcasecmp(valueAsString.get(), "1")); > + return; Please turn !g_ascii_strcasecmp(valueAsString.get(), "true") || !g_ascii_strcasecmp(valueAsString.get() into a helper function, now that it's repeated three times.
Zan Dobersek
Comment 8 2012-03-05 07:36:23 PST
Martin Robinson
Comment 9 2012-03-05 08:38:09 PST
Comment on attachment 130130 [details] Patch Thanks!
WebKit Review Bot
Comment 10 2012-03-05 08:55:21 PST
Comment on attachment 130130 [details] Patch Clearing flags on attachment: 130130 Committed r109753: <http://trac.webkit.org/changeset/109753>
WebKit Review Bot
Comment 11 2012-03-05 08:55:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.