[GTK] plugins/netscape-plugin-page-cache-works.html fails https://bugs.webkit.org/show_bug.cgi?id=74409

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-03-05
Reviewed by Martin Robinson.

Source/WebKit/gtk:

Add a method to override page-cache-for-plugins preference.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::setPageCacheSupportsPlugins):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:
(DumpRenderTreeSupportGtk):

Tools:

Add support for overriding the page-cache-for-plugins preference
through DumpRenderTreeSupport.

* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(booleanFromValue): A helper function to convert a string to boolean.
(LayoutTestController::overridePreference):

LayoutTests:

Unskip one new passing test and reclassify one failure.

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/97414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109753 268f45cc-cd09-0410-ab3c-d52691b4dbfc